Docker network, all docker containers work fine. README updated.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,16 +2,14 @@
 FROM python:3.8
 
 # set the working directory in the container
-WORKDIR /app
+WORKDIR /api
 
 # copy the dependencies file to the working directory
-COPY api/requirements.txt .
+COPY . .
+
 
 # install dependencies
 RUN pip install -r requirements.txt
-
-# copy the content of the local src directory to the working directory
-COPY api/ .
 
 # command to run on container start
 CMD [ "python", "run.py" ]
